[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/main/ui/difficulty/difficulty-button.gd" type="Script" id=1]
[ext_resource path="res://assets/main/ui/difficulty/normal.png" type="Texture" id=2]
[ext_resource path="res://assets/main/ui/font/blogger-sans-medium.otf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=12]
resource_local_to_scene = true
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.423529, 0.262745, 0.192157, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=13]
resource_local_to_scene = true
bg_color = Color( 0.501961, 0.882353, 1, 0.501961 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.501961, 0.882353, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=14]
resource_local_to_scene = true
bg_color = Color( 0, 0.768627, 1, 0.25098 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.501961, 0.882353, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=15]
resource_local_to_scene = true
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.254902, 0.156863, 0.117647, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=16]
resource_local_to_scene = true
size = 14
outline_size = 2
outline_color = Color( 0.423529, 0.262745, 0.192157, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="Button" type="Button" groups=["difficulty_buttons"]]
margin_left = 368.0
margin_right = 528.0
margin_bottom = 140.0
rect_min_size = Vector2( 160, 140 )
rect_pivot_offset = Vector2( 80, 70 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 12 )
clip_text = true
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
show_behind_parent = true
texture = ExtResource( 2 )
texture_scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 1.74444, 11.2386, 5.02201, 4.40256, 10.547, 1.49959, 149.302, 1.968, 155.108, 4.871, 158.385, 11.52, 158.666, 128.7, 155.576, 135.255, 149.957, 138.439, 11.39, 138.346, 4.647, 135.255, 1.557, 129.449 )
uv = PoolVector2Array( 1.74444, 11.2386, 5.02201, 4.40256, 10.547, 1.49959, 149.302, 1.968, 155.108, 4.871, 158.385, 11.52, 158.666, 128.7, 155.576, 135.255, 149.957, 138.439, 11.39, 138.346, 4.647, 135.255, 1.557, 129.449 )

[node name="NameLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 12.0
margin_right = -8.0
margin_bottom = -13.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Turbo Mode"
align = 1
autowrap = true

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
